--- a/src/var.css
+++ b/src/var.css
@@ -1,5 +1,5 @@
 :root {
-  --e-global-color-primary: #6ec1e4;
+  --e-global-color-primary: #ce9e48;
   --e-global-color-secondary: #54595f;
   --e-global-color-text: #7a7a7a;
   --e-global-color-accent: #61ce70;
