add pagination to index page user table and add chart in index page

--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -35,7 +35,7 @@ body.dark .main  .sidebar {
 
 .sidebar-list {
   margin-bottom: 0;
-  padding: 10px 15px;
+  padding: 10px;
 }
 .sidebar-list__btn {
   color: #000 !important;
