--- a/src/Layout/Dashboard/Dashboard.css
+++ b/src/Layout/Dashboard/Dashboard.css
@@ -28,7 +28,7 @@ body.dark {
 .content {
   width: 80%;
   flex: 0 0 80%;
-  padding: 125px 35px 0;
+  padding: 115px 35px 30px;
   transition: all 0.3s;
 }
 .content.toggle {
