--- a/src/Layout/Dashboard/Dashboard.css
+++ b/src/Layout/Dashboard/Dashboard.css
@@ -2,7 +2,7 @@ body {
   background-color: #ebe9e9 !important;
 }
 body.dark {
-  background: #071739 !important;
+  background: #174a58 !important;
 }
 ::-webkit-scrollbar {
   width: 5px !important;
