ends phaze 1- must debug

--- a/src/Components/TopBar/TopBar.css
+++ b/src/Components/TopBar/TopBar.css
@@ -67,7 +67,7 @@ body.dark .header-logo__img {
 }
 body.dark .MuiPaper-elevation,
 body.dark .css-eqeipb-MuiPaper-root-MuiPopover-paper-MuiMenu-paper::before {
-  background-color: #12254e !important;
+  background-color: #174a58 !important;
 }
 body.dark .MuiPaper-elevation li *,
 body.dark .MuiPaper-elevation li {
